# trial-query-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_auth_documents_chunks.py  002_chunk_traceability_and_vector_index.py  003_widen_document_condition.py
app/: main.py
app/api/: auth.py  documents.py  health.py  query.py  stats.py  users.py
app/core/: config.py
app/db/: session.py
app/dependencies/: auth.py
app/models/: __init__.py  document.py  user.py
app/mongo/: client.py  indexes.py  schemas.py
app/schemas/: ingestion.py  query.py  user.py
app/services/: embeddings.py  generation.py  ingestion.py  ingestion_types.py  jwt.py  persistence.py  query_workflow.py  retrieval.py  security.py
app/services/guardrails/: __init__.py  audit.py  input_checks.py  output_checks.py  pipeline.py  types.py
scripts/: db_smoke_test.py  ingest_condition_set.py  ingest_smoke_test.py  ingest_studies.py  mongo_create_indexes.py  mongo_ping.py  mongo_smoke_test.py  query_smoke_test.py
static/: index.html
tests/integration/: test_auth.py  test_documents_ingest.py  test_frontend.py  test_health.py  test_query.py  test_stats.py
tests/unit/: test_generation.py  test_guardrails.py  test_ingest_condition_set.py  test_ingestion.py  test_jwt.py  test_persistence.py  test_query_workflow.py  test_retrieval.py  test_security.py
